Create and design card

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,23 @@
   <link rel="stylesheet" href="sass/style.scss">
   <link rel="shortcut icon" href="./images/nft.png" type="image/x-icon">
 </head>
+
+<body>
+  <div class="nft-card">
+    <img class="nft-card__image" src="/src/images/image-equilibrium.jpg" alt="nft" style="width:100%">
+    <h4 class="nft-card__title">Equilibrium #3429</h4>
+    <p class="nft-card__paragraph">Our Equilibrium collection promotes balance and calm.</p>
+    <div class="eth-container">
+      <span class="eth-container__import">0.041 ETH</span>
+      <span class="eth-container__counter">3 days left</span>
+    </div>
+    <div class="nft-card__line"></div>
+    <div class="bottom-container">
+      <img class="bottom-container__image" src="/src/images/image-avatar.png" alt="profile image">
+      <span class="bottom-container__text">Creation of <span class="white">Jules Wyvern</span></span>
+    </div>
+  </div>
 </body>
+
 
 </html>
