--- a/src/index.html
+++ b/src/index.html
@@ -15,11 +15,19 @@
     <h4 class="nft-card__title">Equilibrium #3429</h4>
     <p class="nft-card__paragraph">Our Equilibrium collection promotes balance and calm.</p>
     <div class="eth-container">
-      <span class="eth-container__import">0.041 ETH</span>
-      <span class="eth-container__counter">3 days left</span>
+      <div>
+        <img class="eth-container__icon-eth" src="/src/images/icon-ethereum.svg" alt="">
+        <span class="eth-container__import">0.041 ETH</span>
+      </div>
+      <div>
+        <img class="eth-container__icon-clock" src="/src/images/icon-clock.svg" alt="">
+        <span class="eth-container__counter">3 days left</span>
+
+      </div>
     </div>
     <div class="nft-card__line"></div>
     <div class="bottom-container">
+
       <img class="bottom-container__image" src="/src/images/image-avatar.png" alt="profile image">
       <span class="bottom-container__text">Creation of <span class="white">Jules Wyvern</span></span>
     </div>
